# AtlasEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: animation.h  atlaswidget.h  camera.h  dirlight.h  framebuffer.h  framebuffer.h.autosave  hdrpostprocess.h  mainwindow.h  material.h  menu.h  mesh.h  model.h  pointlight.h  quad.h  ray.h  renderer.h  scene.h  scenegraphnode.h  shader.h  skybox.h  spotlight.h  ssaopostprocess.h
include/data/: animatedmesh.h  animatedmodel.h  animation.h  armature.h  camera.h  geometryprocess.h  material.h  mesh.h  model.h  pointlight.h  scene.h  scenegraphnode.h  skybox.h  texture.h
include/data/animation/: armature.h
include/data/geometry/: geometrytransform.h  kdtreenode.h  mesh.h  proceduralmap.h  subdivider.h  topologicalmesh.h
include/data/geometry/process/: decimater.h  geometrytransform.h  topologicalmesh.h
include/data/lighting/: dirlight.h  light.h  pointlight.h  spotlight.h
include/loader/: animationloader.h  armatureloader.h  fileloader.h  meshloader.h
include/render/: framebuffer.h  hdrpostprocess.h  pipeline.h  renderer.h  renderer.h.autosave  shader.h  ssaopostprocess.h
include/render/process/: fxaarenderprocess.h  geometryrenderprocess.h  hdrrenderprocess.h  lightingrenderprocess.h  renderprocess.h  shadowmaprenderprocess.h  ssaorenderprocess.h  wireframerenderprocess.h
shaders/: 2D_texture_depth.frag  2D_texture_depth.vert  blur.frag  cubemap_depth.frag  cubemap_depth.geom  deffered_shading.frag  downscaling.frag  gbuffer.frag  gbuffer.vert  hdr.frag  meta.frag  meta.vert  metaforward.frag  metaforward.vert  metagbuffer.frag  metagbuffer.vert  metalighting.frag  ssao.frag  ssaoblur.frag
src/: animation.cpp  atlaswidget.cpp  atlaswidget.h  camera.cpp  dirlight.cpp  framebuffer.cpp  hdrpostprocess.cpp  main.cpp  mainwindow.cpp  material.cpp  menu.cpp  mesh.cpp  model.cpp  pointlight.cpp  quad.cpp  ray.cpp  renderer.cpp  scene.cpp  scenegraphnode.cpp  shader.cpp  skybox.cpp  spotlight.cpp  ssaopostprocess.cpp  texture.cpp
src/core/: a_camera.cpp  a_camera.h  a_light.cpp  a_light.h  a_motion.h  animation.cpp  animation.h  armature.cpp  armature.h  framebuffer.cpp  framebuffer.h  interaction.cpp  interaction.h  material.cpp  material.h  model.cpp  model.h  renderbuffer.cpp  renderbuffer.h  scene.cpp  scene.h  scenegraphnode.cpp  scenegraphnode.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  window.cpp  window.h
src/core/cameras/: orthographiccamera.cpp  orthographiccamera.h  perspectivecamera.cpp  perspectivecamera.h
src/core/lights/: dirlight.cpp  dirlight.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
src/core/models/: renderingquad.cpp  renderingquad.h  skybox.cpp  skybox.h
src/data/: animatedmesh.cpp  animatedmodel.cpp  animation.cpp  armature.cpp  camera.cpp  dirlight.cpp  geometryprocess.cpp  material.cpp  mesh.cpp  model.cpp  pointlight.cpp  quad.cpp  scene.cpp  scenegraphnode.cpp  skybox.cpp  spotlight.cpp  texture.cpp
src/data/animation/: animation.cpp  armature.cpp
src/data/geometry/: geometrytransform.cpp  mesh.cpp  proceduralmap.cpp  subdivider.cpp
src/data/geometry/process/: decimater.cpp  geometrytransform.cpp  subdivider.cpp
src/data/lighting/: dirlight.cpp  light.cpp  pointlight.cpp  skybox.cpp  spotlight.cpp
src/ecs/: a_component.cpp  a_component.h  a_entity.cpp  a_entity.h  a_system.cpp  a_system.h
src/geometry/: decimater.cpp  decimater.h  geometrytransform.cpp  geometrytransform.h  subdivider.cpp  subdivider.h  topologicalmesh.h
src/load/: animationloader.cpp  animationloader.h  armatureloader.cpp  armatureloader.h  cameraloader.cpp  cameraloader.h  fileloader.cpp  fileloader.h  lighthloader.cpp  lightloader.h  materialloader.cpp  materialloader.h  modelloader.cpp  modelloader.h  textureloader.cpp  textureloader.h
src/loader/: animationloader.cpp  armatureloader.cpp  fileloader.cpp  meshloader.cpp
src/main/: main.cpp
src/render/: a_renderprocess.cpp  a_renderprocess.h  framebuffer.cpp  hdrpostprocess.cpp  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  ssaopostprocess.cpp
src/render/process/: fxaarenderprocess.cpp  geometryrenderprocess.cpp  hdrrenderprocess.cpp  lightingrenderprocess.cpp  renderprocess.cpp  shadowmaprenderprocess.cpp  ssaorenderprocess.cpp  wireframerenderprocess.cpp
src/render/renderprocesses/: fxaarenderprocess.cpp  fxaarenderprocess.h  geometryrenderprocess.cpp  geometryrenderprocess.h  hdrrenderprocess.cpp  hdrrenderprocess.h  lightingrenderprocess.cpp  lightingrenderprocess.h  ssaorenderprocess.cpp  ssaorenderprocess.h  wireframerenderprocess.cpp  wireframerenderprocess.h
